Remove dependence on ExtendedTableViewDelegate for DownloadWindow class

--- a/Vienna/Interfaces/Base.lproj/Downloads.xib
+++ b/Vienna/Interfaces/Base.lproj/Downloads.xib
@@ -33,7 +33,7 @@
                             <rect key="frame" x="0.0" y="0.0" width="315" height="391"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <subviews>
-                                <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" alternatingRowBackgroundColors="YES" columnReordering="NO" columnResizing="NO" multipleSelection="NO" autosaveColumns="NO" rowHeight="26" usesAutomaticRowHeights="YES" viewBased="YES" id="8" customClass="ExtendedTableView">
+                                <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" alternatingRowBackgroundColors="YES" columnReordering="NO" columnResizing="NO" multipleSelection="NO" autosaveColumns="NO" rowHeight="26" usesAutomaticRowHeights="YES" viewBased="YES" id="8">
                                     <rect key="frame" x="0.0" y="0.0" width="315" height="391"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <size key="intercellSpacing" width="3" height="6"/>
